--- a/music/rap.html
+++ b/music/rap.html
@@ -26,9 +26,9 @@
     </aside>
     <main>
         <section class="no-top-separator">
-            <h1>
+            <h2>
                 Le Rap
-            </h1>
+            </h2>
             <p>
                Le rap est un mouvement culturel et musical  soutenant un chant aux paroles, improvisées ou non, scandées sur un rythme très martelé,
                 il prend ses racines du hip-hop, ayant émergé au début des années 1970 dans les ghettos aux États-Unis. 
@@ -37,7 +37,7 @@
             <figure class="simple-yt">
                 <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ag_jeCgwVrw"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                    allowfullscreen> </iframe>
                 <figcaption>
                    Le premier tube de rap, Rapper's Delight  de Sugarhill Gang.
                 </figcaption>
@@ -47,7 +47,7 @@
             </p>
             <ul>
                 <li>
-                    <a href="rapfr"> Rap FR</a>
+                    <a href="rapfr"> Rap FR </a>
                 </li>
                 <li>
                     <a href="rapus">Rap US </a>
@@ -55,7 +55,7 @@
             </ul>
 
             <article id="rapfr">
-                <h2>Rap FR</h2>
+                <h2>Rap FR </h2>
                 <p> Comme son nom l'indique, il s'agit du rap français. A la fin des années 80, celui-ci arrive avec les premiers freestyles de NTM, Assassin et MC Solaar.
                     Voici quelques exemples de rappeurs les plus populaires aujourd'hui. 
                 </p>
@@ -63,7 +63,10 @@
                         <li>
                          Columbine
                         </li>
-                        <img src="images/logo columbine.jpg"  height="300px" width="300px"  alt="le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)">
+                        <figure class="float-rightbordered"> 
+                        <img src="images/columbine.jpg"
+                        alt="le logo du groupe, «colombe-Kalash» ( kalachnikov, le fusil d'assaut russe AK-47)" />
+                        </figure>
                         <p>
                         collectif de rap français formé en 2014, originaire de la banlieu de Rennes, leur troisième album Adieu bientôt a été certifié disque de platine. 
                         Leur titres les plus connus sont pierre, feuille, papier, ciseau; c'est pas grave, adieu bientôt, les prélis.
@@ -71,14 +74,23 @@
                         <li>
                         Nekfeu
                         </li>
-                        <img src="images/nekfeu.jpg"  height="300px" width="300px" alt="Nekfeu">
-                        <p>membre du groupe S-Crew et 1995, il appartient au collectif l'Entourage et a également fait partie de 5 Majeur.
+                             <figure class="float-rightbordered">
+                                 <img src="images/nekfeu.jpg"  
+                                     height="300px" 
+                                     width="300px" 
+                                     alt="" />  
+                        </figure>
+                        <p>
+                        Membre du groupe S-Crew et 1995, il appartient au collectif l'Entourage et a également fait partie de 5 Majeur.
                         Son dernier album, les étoiles vagabondes, est certifié triple disque de platine. Ses principaux titres sont princesse, on verra, ma dope.
                         </p>
                         <li>
                              PNL
                         </li>
-                        <img src="images/pnl.jpg" height="300px" width="300px" alt= "la pochette de leur dernier album, deux frères.">
+                             <figure class="float-rightbordered">
+                                <img src="PT19_20\images\pnl.jpg"
+                                    alt= "la pochette de leur dernier album, deux frères." />
+                        </figure>
                         <p>
                         sigle de Peace N’ Lovés, est un groupe de rap français indépendant, composé de deux frères, Ademo et N.O.S (de leurs vrais noms Tarik et Nabil Andrieu),
                         originaires de la cité des Tarterêts à Corbeil-Essonnes.
@@ -86,22 +98,25 @@
                         Mi-août 2019, l'album "deux frères" devient triple disque de platine avec plus de 300 000 ventes. 
                         </p>
                         <figure class="simple-yt">
-                                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/BtyHYIpykN0"
-                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                    allowfullscreen></iframe>
+                                <iframe class="yt-integration" 
+                                src="https://www.youtube-nocookie.com/embed/BtyHYIpykN0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen> </iframe>
                                 <figcaption>
-                                   Le clip "au DD", au détail, référence à la vente de cannabis découpé en petite quantité.
+                                   Le clip "au DD", au détail, qui fait référence à la vente de cannabis découpé en petite quantité.
                                 </figcaption>
                             </figure>
                         <li> 
                             Orelsan
                         </li>
-                        <img src="images/orelsan.jpg" height="300px" width="300px" alt="">
+                        <figure class="float-rightbordered"> 
+                             <img src="images/orelsan.jpg" 
+                                 alt="" />
+                        </figure>
                         <p>
                         Membre des Casseurs-Flowteurs avec son ami Gringe, voix française de Saitama du manga One Punch Man, il revient à la musique en 2017 avec le titre "basique",
                         avant de sortir l'album la fête est finie, certifié disque de diamant. Le rappeur a remporté trois Victoires de la musique.  
-                        Ses titres les plus populaires sont paradis, défaite de famille et mes grands-parents.
-                                
+                        Ses titres les plus populaires sont paradis, défaite de famille et mes grands-parents.        
                         </p>
 
 
@@ -128,32 +143,19 @@
                     Il existe de nombreux autres rappeurs américains connus, comme Kanye West, Fat Joe, Asap Rocky, XXXTentacion, Jay Z, Snoop Dog, Dr Dre et beaucoup d'autres.
                 </p>
                 <figure class="simple-yt">
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/LunHybOKIjU"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <iframe class="yt-integration" 
+                        src="https://www.youtube-nocookie.com/embed/LunHybOKIjU"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen> </iframe>
                         <figcaption>
                            Le freestyle anti-Trump. 
                         </figcaption>
                     </figure>
-
-
-
-
-
-
             </article>
-
-
-
-
-
-
-
-
         </section>
     </main>
     <footer>
-        <iframe src="../footer.html"></iframe>
+        <iframe src="../footer.html"> </iframe>
     </footer>
 </body>
 
