--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             </h3>
             <p>
                 Nous sommes des élèves du DUT Informatique en première année, avant cela nous avions entamé chacun
-                une formation différentes (certains sortent d'un BAC S, d'autre d'un autre faculté, etc.). Certains
+                une formation différentes (certains sortent d'un BAC S, d'autre d'une autre faculté, etc.). Certains
                 des membres de l'équipe débutent alors que d'autres ont plus d'expérience en HTML/CSS.
             </p>
             <p>
@@ -102,7 +102,7 @@
                                 alt="GitHub icon" /> Profil GitHub</a>
                     </div>
                     <p>
-                        Punchliner et passionné d'électro
+                        Punchliner et passionné de musique, rap et électro
                     </p>
                 </li>
             </ul>
