--- a/nav.html
+++ b/nav.html
@@ -26,6 +26,7 @@
                 <span class="dropdown-title">Musique</span>
                 <ul>
                     <li>
+                        <!--TODO #7 : Images manquantes-->
                         <a href="histoire.html#">
                             <img src="icon_placeholder.png" alt="icon item 11" />
                             <div class="nav-text">Histoire de la musique</div>
@@ -44,6 +45,7 @@
                         </a>
                     </li>
                     <li>
+                        <!--TODO #7 : Images manquantes-->
                         <a href="music/pop.html#">
                             <img src="icon_placeholder.png" alt="icon item 14" />
                             <div class="nav-text">Pop</div>
@@ -56,12 +58,14 @@
                         </a>
                     </li>
                     <li>
+                        <!--TODO #7 : Images manquantes-->
                         <a href="music/rap.html#">
                             <img src="images/icons/rap.png" alt="icon item 16" />
                             <div class="nav-text">Rap</div>
                         </a>
                     </li>
                     <li>
+                        <!--TODO #7 : Images manquantes-->
                         <a href="#">
                             <img src="icon_placeholder.png" alt="icon item 17" />
                             <div class="nav-text">Alternative</div>
