rédaction de l'histoire

--- a/histoire.html
+++ b/histoire.html
@@ -26,7 +26,6 @@
     </aside>
     <main>
         <h2>L'histoire de la musique</h2>
-        <!-- TODO #4: Reformuler l'histoire -->
         <section class="no-top-separator">
             <h3>La musique au XXe siècle</h3>
             <figure class="float-right bordered">
@@ -41,49 +40,46 @@
                 </figcaption>
             </figure>
             <p>
-                La musique une importance grandissante à partir du XXe siècle les différents genres musicaux
-                populaires auxquels les moyens de communication de masse permettent une diffusion sans précédent.
+                La musique à une importance grandissante à partir du 20<span class="power">e</span> siècle les
+                différents genres musicaux populaires auxquels les moyens de communication de masse permettent une
+                diffusion sans précédent.
             </p>
             <p>
-                Au début du XXe siècle, la musique occidentale a profondément changé, bouleversée jusque dans ses
-                fondements. Ont aussi changé, grâce à l'invention récente de la radiodiffusion et du phonographe,
-                les modes et les temps de l'écoute, à l'origine limitée aux concerts donnés dans des lieux
-                spécifiquement dédiés comme les salles de théâtre, les clubs ou les domiciles privés. Elle commence
-                d'une part à se créer un public potentiel plus vaste, qui apprécie des structures mélodiques et
-                harmoniques plus simples, et d'autre part, jamais comme durant cette période historique il n'aura
-                été aussi facile, pour qui veut jouer de la musique, de se procurer un instrument et d'apprendre à
-                l'utiliser.
+                Au début du 20<span class="power">e</span> siècle, la musique occidentale a profondément changé : grâce
+                à l'invention de la radiodiffusion et du phonographe, les modes et les temps de l'écoute (à l'origine
+                limitée aux concerts donnés dans des lieux spécifiquement dédiés comme les salles de théâtre, les clubs
+                ou les domiciles privés) ont évolués. La musique commence à être écoutée dans les maisons et plus
+                régulièrement. Par conséquent, elle commence d'une part à se créer un public potentiel plus vaste, et
+                d'autre part, c'est durant cette période historique qu'il n'aura jamais été aussi facile de se procurer
+                un instrument et d'apprendre à l'utiliser.
             </p>
             <p>
-                À ceci doit être ajoutée une seconde révolution, technologique également, l'invention du
+                La musique subit une seconde révolution, technologique également, l'invention du
                 haut-parleur et de l'amplification audio qui permet de faire entendre ensemble des instruments qui
                 ne pourraient l'être autrement, le son des uns étant couvert par celui des autres, comme une
                 guitare, une batterie et un piano.
             </p>
             <p>
                 Ces nouvelles possibilités techniques offrent une occasion de développer de nouveaux moyens
-                d'expression, créant entre 1920 et la fin des années 1980 et, dans une moindre mesure, pendant les
-                années successives, une floraison de nouveaux styles ou genres comme le jazz, le blues, le rock, la
-                soul music, la musique pop, la musique funk, le rap, le metal, la fusion, chacun de ces styles se
-                subdivisant ensuite en sous-genres. Naissent ainsi des personnages qui deviennent d'authentiques
-                phénomènes médiatiques atteignant une popularité sans précédent (Frank Sinatra, Elvis Presley,
-                Michael Jackson ou les Beatles par exemple).
+                d'expression, créant entre 1920 et la fin des années 1980 , une floraison de nouveaux styles ou
+                genres comme le jazz, le blues, le rock, la soul music, la musique pop, la musique funk, le rap,
+                le metal. Chacun de ces styles se générant ensuite en sous-genres. Naissent ainsi des personnages qui
+                deviennent d'authentiques phénomènes médiatiques atteignant une popularité sans précédent comme Elvis
+                Presley, Michael Jackson ou les Beatles par exemple.
             </p>
             <p>
                 Ces facteurs, ajoutés aux mutations sociales et économiques du monde occidental, font se développer
                 d'une manière extrêmement importante les aspects commerciaux du phénomène musical : dans le courant
-                du XXe siècle, la demande populaire de musique fait naître, en occident et dans le reste du monde,
-                une véritable industrie musicale, aux dimensions et aux ressources gigantesques.
+                du 20<span class="power">e</span> siècle, la demande populaire de musique fait naître, en occident
+                et dans le reste du monde, une véritable industrie musicale.
             </p>
             <p>
                 L'industrie du disque était déjà une industrie de l'enregistrement qui nécessitait de grands
-                investissements et offrait des marges bénéficiaires faibles. Il fallait vendre de grandes quantités
-                de disques pour rembourser les investissements. Le copyright, et ses droits associés, sont un des
-                domaines les plus complexes et ils donnent la clé pour comprendre de manière approfondie les
-                pratiques commerciales de l'industrie du divertissement contemporaine. Avec les technologies
-                numériques, les coûts de production ont baissé, "les droits ont une valeur très différente, et la
-                création de nouveaux produits qui peuvent être lancés sur le marché devient moins importante que le
-                contrôle des droits qui peuvent être exploités".
+                investissements et offrait des bénéfices faibles. Il fallait vendre de grandes quantités
+                de disques pour rembourser les investissements. Le copyright (les droits d'auteurs), et ses
+                droits associés, sont un des domaines les plus complexes et ils donnent la clé pour comprendre de
+                manière approfondie les pratiques commerciales de l'industrie du divertissement contemporaine. Avec les
+                technologies numériques, les coûts de production ont baissé.
             </p>
             <span class="source">Source : Wikipédia</span>
         </section>
