rock rockabilly + progressif

--- a/music/rock.html
+++ b/music/rock.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
 </head>
 
-<body class="metal-bg">
+<body> class="rock-bg"
     <header>
         <div class="title">
             <a href="../index.html#" class="logo50"></a>
@@ -27,20 +27,23 @@
     <main>
         <section class="no-top-separator">
             <h2>
-                Le rock
+                Le rock'n'roll
             </h2>
             <p>
-                Le rock est un style dérivé du jazz, apparu dans les années 50s. Il a généralement un rythme très
-                rapide et agressif. <a href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank">Black
-                    Sabbath</a> a été le
-                premier groupe à proposer ce style, et est devenu l'emblème du metal, son créateur.
+                Le rock est un style dérivé du jazz, apparu dans les années 50. Apparu sous la forme du rock 'n' roll,
+                il ressemble alors à un mélange de jazz, de blues, de country, mais aussi de bluegrass (style de music
+                américain) avec certaines influences folk ou européennes non négligeables. Depuis, le rock a évolué et
+                est devenu un style de musique très varié, majeur et omniprésent depuis le milieu du siècle précédent.
+                <a href="https://fr.wikipedia.org/wiki/Bill_Haley" target="_blank">Bill
+                    Haley</a> est considéré comme le premier à populariser le genre.
             </p>
             <figure class="simple-yt">
-                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/uk_wUT1CvWM"
+                <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ZgdufzXvjqw"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
                 <figcaption>
-                    Un exemple ci-dessus : leur titre le plus connu, qui a été un énorme succès en 1970.
+                    Son titre le plus connu, qui a été un énorme succès en 1955. Le morceau est devenu emblématique de
+                    la naissance du rock'n'roll.
                 </figcaption>
             </figure>
             <p>
@@ -48,7 +51,7 @@
             </p>
             <ul>
                 <li>
-                    <a href="#country">Rock Country</a>
+                    <a href="#rockabilly">Rockabilly</a>
                 </li>
                 <li>
                     <a href="#thrash">Thrash metal</a>
@@ -76,83 +79,104 @@
                 </li>
             </ul>
         </section>
-        <section id="heavy">
+        <section id="rockabilly">
             <h2>
-                Heavy metal
+                Rockabilly
             </h2>
             <p>
-                Le heavy metal est le genre de metal le plus répandu. C'est un style dérivé du blues rock avec
-                principalement de la guitare électrique. C'est également le style de metal qui a beaucoup inspiré pour
-                créer la grande majorité des autres genres (thrash, black, doom, etc...).<br />
-                3 groupes connus :
+                Le rockabilly est un croisement entre le rythm and blues et la country, le rockabilly naît au sud des
+                États-Unis dans les années 50 avec des artistes comme Elvis Presley et Bill Haley. Genre rural, il tient
+                son nom d’un mot-valise entre rock et hilbilly, un terme désignant les péquenauds, les ploucs. Considéré
+                à l’origine comme un enfant de la country, le rockabilly est le premier sous-genre résolument rock.
+            </p>
+            <span class="source">Source : madmoizelle.com</span>
+            <p>
+                3 artistes de rockabilly :
             </p>
             <ul>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a>
+                    <a href="https://fr.wikipedia.org/wiki/Elvis_Presley" target="_blank">Elvis Presley</a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Judas_Priest" target="_blank">Judas Priest</a>
+                    <a href="https://fr.wikipedia.org/wiki/Chuck_Berry" target="_blank">Chuck Berry</a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Dio_(groupe)" target="_blank">Dio</a>
+                    <a href="https://fr.wikipedia.org/wiki/The_Blues_Brothers" target="_blank">The Blues Brothers
+                    </a>
                 </li>
             </ul>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/3HMrMZ56giBGJYcCMSRijs" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/0cOzbbDNlOxMtfEpOY9XWE" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/EhGEGIBGLu8"
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/T38v3-SSGcM"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/86URGgqONvA"
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/MrOsHfZsVLk"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de heavy metal, Holy Diver de Dio (1983) et Run to the Hills de Iron Maiden (1982)
+                    Deux titres de rockabilly : Johnny B. Goode de Chuck Berry (1957) et Everybody Needs Somebody des
+                    Blue Brothers (1964)
                 </figcaption>
             </figure>
         </section>
-        <section id="thrash">
+        <section id="progressif">
             <h2>
-                Thrash metal
+                Le rock progressif
             </h2>
             <p>
-                Le Thrash metal est plutôt dérivé du <a href="">Punk rock</a>. Encore plus rapide/aggressive
-                que le <a href="#heavy">Heavy metal</a>, il se développe dans les années 1980. Le Thrash aborde souvent
-                des sujets comme la politique, la mort, la drogue ou la violence en général. Les groupes tels que <a
-                    href="https://fr.wikipedia.org/wiki/Iron_Maiden" target="_blank">Iron Maiden</a>, <a
-                    href="https://fr.wikipedia.org/wiki/Motörhead" target="_blank">Motörhead</a> ou <a
-                    href="https://fr.wikipedia.org/wiki/Black_Sabbath" target="_blank">Black Sabbath</a> (et bien
-                d'autres) ont été les principaux précurseurs du genre.<br />
-                3 groupes connus, dont un plus récent :
+                Alors que le rock prend de l’ampleur sur la scène musicale et dans la société, les premiers
+                contre-courants rock naissent vers la fin des années 60.
             </p>
-            <ul>
-                <li>
-                    <a href="https://fr.wikipedia.org/wiki/Metallica" target="_blank">Metallica</a>
-                </li>
-                <li>
-                    <a href="https://fr.wikipedia.org/wiki/Slayer" target="_blank">Slayer</a>
-                </li>
-                <li>
-                    <a href="https://fr.wikipedia.org/wiki/Trivium_(groupe)" target="_blank">Trivium</a>
-                </li>
-            </ul>
+            <p>
+                Le premier est le rock progressif : né au Royaume-Uni, le terme désigne une forme plus évoluée et
+                complexe que le rock originel. La composition est particulièrement travaillée, les textes engagés et
+                puissants sont laissés de côté au point que le rock progressif met au point les premiers morceaux rock
+                entièrement instrumentaux. Inspiré par le jazz, le blues et même la musique classique, il est porté par
+                des groupes comme <a href="https://fr.wikipedia.org/wiki/Pink_Floyd" target="_blank">Pink Floyd</a>, 
+                <a href="https://fr.wikipedia.org/wiki/Genesis_(groupe)" target="_blank">Genesis</a> ou <a href="https://fr.wikipedia.org/wiki/Yes" target="_blank">Yes</a>.
+            </p>
+            <span class="source">Source : madmoizelle.com</span>
+            <p>
+                Deux titres (relativement) connus de rock progressif :
+            </p>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/0gbhJ9VIFskEEHYkDyX4X1" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/7i4lAnzRjwxO4jtuMXGME8" frameborder="0"
+                        allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
             <figure class="double-yt">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/xnKhsTXoKCI"
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/YR5ApYxkU-U"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/z8ZqFlw6hYg"
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/pSn-qsFyj7E"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de thrash metal, Master of Puppets de Metallica (1986) et Raining Blood de Slayer (1986)
+                    Deux titres, The Wall des Pink Floyd (1986) et The Ancient (Giants under the Sun) de Yes (1973)
                 </figcaption>
             </figure>
         </section>
-        <section id="black">
+        <section id="hard">
             <h2>
-                Black metal
+                Le Hard Rock
             </h2>
             <p>
                 Le Black metal est un genre issu du <a href="#thrash">Thrash metal</a>, une version extrême de celui-ci.
@@ -390,7 +414,8 @@
             <p>
                 Le Groove metal se trouve juste entre le Heavy metal et le Death metal. <a
                     href="https://fr.wikipedia.org/wiki/Pantera" target="_blank">Pantera</a>
-                a été l'un des précurseurs du genre. Le genre est plus axé sur les vocales par rapport au Death metal. Le
+                a été l'un des précurseurs du genre. Le genre est plus axé sur les vocales par rapport au Death metal.
+                Le
                 Groove metal est également un des style ayant
                 influencé le <a href="https://fr.wikipedia.org/wiki/Nu_metal" target="_blank">Nu metal</a> (un
                 sous-genre de metal alternatif). Beaucoup de groupes
@@ -419,7 +444,8 @@
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de groove metal, Coulds Over California de DevilDriver (2007) et Laid to Rest de Lamb of God (2004)
+                    Deux titres de groove metal, Coulds Over California de DevilDriver (2007) et Laid to Rest de Lamb of
+                    God (2004)
                 </figcaption>
             </figure>
         </section>
