added hard rock

--- a/music/rock.html
+++ b/music/rock.html
@@ -111,7 +111,7 @@
                         allowtransparency="true" allow="encrypted-media"></iframe>
                 </div>
                 <div>
-                    <iframe src="https://open.spotify.com/embed/track/0cOzbbDNlOxMtfEpOY9XWE" frameborder="0"
+                    <iframe src="https://open.spotify.com/embed/track/5CQ30WqJwcep0pYcV4AMNc" frameborder="0"
                         allowtransparency="true" allow="encrypted-media"></iframe>
                 </div>
             </div>
@@ -143,8 +143,9 @@
                 complexe que le rock originel. La composition est particulièrement travaillée, les textes engagés et
                 puissants sont laissés de côté au point que le rock progressif met au point les premiers morceaux rock
                 entièrement instrumentaux. Inspiré par le jazz, le blues et même la musique classique, il est porté par
-                des groupes comme <a href="https://fr.wikipedia.org/wiki/Pink_Floyd" target="_blank">Pink Floyd</a>, 
-                <a href="https://fr.wikipedia.org/wiki/Genesis_(groupe)" target="_blank">Genesis</a> ou <a href="https://fr.wikipedia.org/wiki/Yes" target="_blank">Yes</a>.
+                des groupes comme <a href="https://fr.wikipedia.org/wiki/Pink_Floyd" target="_blank">Pink Floyd</a>,
+                <a href="https://fr.wikipedia.org/wiki/Genesis_(groupe)" target="_blank">Genesis</a> ou <a
+                    href="https://fr.wikipedia.org/wiki/Yes" target="_blank">Yes</a>.
             </p>
             <span class="source">Source : madmoizelle.com</span>
             <p>
@@ -179,35 +180,42 @@
                 Le Hard Rock
             </h2>
             <p>
-                Le Black metal est un genre issu du <a href="#thrash">Thrash metal</a>, une version extrême de celui-ci.
-                Le genre a souvent un caractère très brutal et sombre.
-                Les aïgus sont beaucoup plus présents que dans d'autres styles de metal, couplé à du <a
-                    href="https://fr.wikipedia.org/wiki/Chant_guttural" target="_blank">chant guttural</a>.
-                Le côté malsain, sataniste et violent en font un style très souvent mal vu par la société.<br />
-                3 groupes répandus :
+                Apparu au cours des années 1960 aux États-Unis, le hard rock prend ses influences dans le blues rock, le
+                rock psychédélique et le garage rock : un genre agressif aux sonorités distordues, des riffs en veux-tu
+                en voilà et une forte influence de la science-fiction et de la fantasy, entre autres. De façon générale,
+                le hard rock englobe les courants du <a href="metal.html#heavy">heavy metal</a>, du <a href="#punk">punk
+                    rock</a> et du grunge pour les différencier du pop rock.
             </p>
-            <ul>
-                <li>
-                    <a href="https://fr.wikipedia.org/wiki/Mayhem" target="_blank">Mayhem</a>
-                </li>
-                <li>
-                    <a href="https://fr.wikipedia.org/wiki/Immortal" target="_blank">Immortal</a>
-                </li>
-                <li>
-                    <a href="https://fr.wikipedia.org/wiki/Darkthrone" target="_blank">Darkthrone</a>
-                </li>
-            </ul>
+            <p>
+                Si les bases du hard rock sont puisées dans les sons puissants d’artistes comme The Who ou The Kinks,
+                les principaux représentants du genre sont plutôt Led Zeppelin, AC/DC, Kiss,
+                Guns N’Roses…
+            </p>
+            <span class="source">Source : madmoizelle.com</span>
+            <p>
+                Deux titres connus de hard rock :
+            </p>
+            <div class="spotify-integ">
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/08mG3Y1vljYA6bvDt4Wqkj" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div>
+                        <iframe src="https://open.spotify.com/embed/track/7i4lAnzRjwxO4jtuMXGME8" frameborder="0"
+                            allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
             <figure class="double-yt">
                 <div>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/QIf2GgA1rGc"
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/pAgnJDJN4VA"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
-                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/z8VIhIIq-kk"
+                    <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/QkF3oxziUI4"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <figcaption>
-                    Deux titres de black metal, Quintessence de Darkthorne (1995) et Freezing Moon de Mayhem (1994)
+                    Deux titres de hard rock : Back In Black de AC/DC (1995) et Stairway to Heaven de Led Zeppelin (1994)
                 </figcaption>
             </figure>
         </section>
