--- a/music/rock.html
+++ b/music/rock.html
@@ -54,28 +54,19 @@
                     <a href="#rockabilly">Rockabilly</a>
                 </li>
                 <li>
-                    <a href="#thrash">Thrash metal</a>
+                    <a href="#progressif">Rock progressif</a>
                 </li>
                 <li>
-                    <a href="#black">Black metal</a>
+                    <a href="#hard">Hard Rock</a>
                 </li>
                 <li>
-                    <a href="#death">Death metal</a>
+                    <a href="#punk">Punk Rock</a>
                 </li>
                 <li>
-                    <a href="#power">Power metal</a>
+                    <a href="#grunge">Grunge</a>
                 </li>
                 <li>
-                    <a href="#folk">Folk metal</a>
-                </li>
-                <li>
-                    <a href="#doom">Doom metal</a>
-                </li>
-                <li>
-                    <a href="#alternative">Alternative metal</a>
-                </li>
-                <li>
-                    <a href="#groove">Groove metal</a>
+                    <a href="#indep">Rock Indépendant</a>
                 </li>
             </ul>
         </section>
@@ -184,14 +175,11 @@
                 </h3>
                 <p>
                     Apparu au cours des années 1960 aux États-Unis, le hard rock prend ses influences dans le blues
-                    rock, le
-                    rock psychédélique et le garage rock : un genre agressif aux sonorités distordues, des riffs en
-                    veux-tu
-                    en voilà et une forte influence de la science-fiction et de la fantasy, entre autres. De façon
-                    générale,
-                    le hard rock englobe les courants du <a href="metal.html#heavy">heavy metal</a>, du <a
-                        href="#punk">punk
-                        rock</a> et du <a href="#grunge">grunge</a> pour les différencier du pop rock.
+                    rock, le rock psychédélique et le garage rock : un genre agressif aux sonorités distordues, des
+                    riffs en veux-tu en voilà et une forte influence de la science-fiction et de la fantasy, entre
+                    autres. De façon générale, le hard rock englobe les courants du <a href="metal.html#heavy">heavy
+                        metal</a>, du <a href="#punk">punk rock</a> et du <a href="#grunge">grunge</a> pour les
+                    différencier du pop rock.
                 </p>
                 <p>
                     Si les bases du hard rock sont puisées dans les sons puissants d’artistes comme <a
@@ -226,45 +214,55 @@
                             allowfullscreen></iframe>
                     </div>
                     <figcaption>
-                        Deux titres de hard rock : Back In Black de AC/DC (1995) et Stairway to Heaven de Led Zeppelin
-                        (1994)
+                        Deux titres de hard rock : Back In Black de AC/DC (1980) et Stairway to Heaven de Led Zeppelin
+                        (1971)
                     </figcaption>
                 </figure>
             </article>
-            <article id="death">
+            <article id="punk">
                 <h3>
-                    Death metal
+                    Le punk rock
                 </h3>
                 <p>
-                    Le Death metal est, comme le black metal, issu du Thrash metal, également en plus extrême. La grande
-                    différence est que l'ensemble est plus grave :
-                    grande présence de chant guttural profond et des riffs qui penchent beaucoup plus dans les basses
-                    fréquences. Il existe plusieurs formes du death metal car il reste un style très varié dont les
-                    spécificités peuvent changer d'un album à un autre.<br />
-                    3 groupes connus, dont un français (chant anglais) :
+                    Le mouvement punk apparaît au milieu des années 70, de pair avec le punk rock. Musicalement, le punk
+                    rock s’inspire du garage rock des années 60 : l’instrumentation est plus simple que dans le rock
+                    considéré commercial et voulant trop répondre à une demande du public (nouveaux sons, nouveaux
+                    instruments…). Le chant est souvent crié, parfaitement adapté à des paroles puissantes et portée
+                    vers la confrontation.
+                </p>
+                <span class="source">Source : madmoizelle.com</span>
+                <p>
+                    2 groupes connus :
                 </p>
                 <ul>
                     <li>
-                        <a href="https://fr.wikipedia.org/wiki/Death" target="_blank">Death</a>
+                        <a href="https://fr.wikipedia.org/wiki/Green_Day" target="_blank">Green Day</a>
                     </li>
                     <li>
-                        <a href="https://fr.wikipedia.org/wiki/Cannibal_Corpse" target="_blank">Cannibal Corpse</a>
-                    </li>
-                    <li>
-                        <a href="https://fr.wikipedia.org/wiki/Gojira" target="_blank">Gojira</a>
+                        <a href="https://fr.wikipedia.org/wiki/The_Offspring" target="_blank">The Offspring</a>
                     </li>
                 </ul>
+                <div class="spotify-integ">
+                        <div>
+                            <iframe src="https://open.spotify.com/embed/track/64yrDBpcdwEdNY9loyEGbX" frameborder="0"
+                                allowtransparency="true" allow="encrypted-media"></iframe>
+                        </div>
+                        <div>
+                            <iframe src="https://open.spotify.com/embed/track/6TfBA04WJ3X1d1wXhaCFVT" frameborder="0"
+                                allowtransparency="true" allow="encrypted-media"></iframe>
+                        </div>
+                    </div>
                 <figure class="double-yt">
                     <div>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/b9AMFf5Ih7Y"
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/r00ikilDxW4"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
-                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/BGHlZwMYO9g"
+                        <iframe class="yt-integration" src="https://www.youtube-nocookie.com/embed/ql9-82oV2JE"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
                     <figcaption>
-                        Deux titres de death metal, Spirit Crusher de Death (1998) et L'enfant Sauvage de Gojira (2012)
+                        21 Guns de Green Day (2009) et You're Gonna Go Far Kid de The Offspring (2008)
                     </figcaption>
                 </figure>
             </article>
@@ -279,11 +277,10 @@
                     dans
                     la mélodie.
                     C'est également un des rares styles (avec le symphonic metal) qui intègrent parfois une symphonie,
-                    ce
-                    qui le rapproche parfois de
-                    la <a href="https://fr.wikipedia.org/wiki/Musique_classique" target="_blank">musique classique</a>.
-                    Le
-                    style met beaucoup l'accent sur les paroles qui sont mises au premier plan, et avec des musiques qui
+                    ce qui le rapproche parfois de la <a href="https://fr.wikipedia.org/wiki/Musique_classique"
+                        target="_blank">musique classique</a>.
+                    Le style met beaucoup l'accent sur les paroles qui sont mises au premier plan, et avec des musiques
+                    qui
                     possèdent rarement du chant guttural.<br />
                     3 groupes connus :
                 </p>
